Implemented frmHttpServer, forgoted it ^^'

--- a/RapidServerServerApp/RapidServerServerApp.csproj
+++ b/RapidServerServerApp/RapidServerServerApp.csproj
@@ -54,6 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmHttpServer.resx">
+      <DependentUpon>frmHttpServer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RapidServerLib\RapidServerLib.csproj">
+      <Project>{ddc044f4-679d-4ca3-bbe5-30de5ffa4b7a}</Project>
+      <Name>RapidServerLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
